---------------------------------------------------------------------------------------------------
Version: 2.2.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.2.2
Date: 2020-12-10
  Changes:
    - Migration fix.
---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: 2020-12-09
  Changes:
    - Added smelter. Warning: All the alloys recipes will be moved to this new building.
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 2020-12-06
  Changes:
    - Fixed crash caused by hightech pipe casting recipe still being enabled when pyhightech was disabled.
---------------------------------------------------------------------------------------------------
Version: 2.1.13
Date: 2020-12-01
  Changes:
    - Removed vanilla bots.
    - Tweak techs to adapt it.
---------------------------------------------------------------------------------------------------
Version: 2.1.12
Date: 2020-11-24
  Changes:
    - Updated to factorio version 1.1.
---------------------------------------------------------------------------------------------------
Version: 2.1.11
Date: 2020-11-20
  Changes:
    - Added new casting recipes.
---------------------------------------------------------------------------------------------------
Version: 2.1.10
Date: 2020-11-16
  Changes:
    - Removed sand casting from glass as that created a deadlock at game start.
---------------------------------------------------------------------------------------------------
Version: 2.1.9
Date: 2020-11-15
  Changes:
    - Added fuel glow colors for the different tiers of uranium fuel cells in the reactor.
    - Removed sand casting from molten titanium and molten glass.
    - Added sand casting to glass made from molten glass.